fix: adds border bottom transparent to cube ctrl radio buttons to remove layout shift once selected

--- a/lucuberate-client/src/pages/Dashboard/DashboardOutlets/StudyCube/style.css
+++ b/lucuberate-client/src/pages/Dashboard/DashboardOutlets/StudyCube/style.css
@@ -289,6 +289,7 @@ ul.face-content {
   .radio-face-group .radio-label {
     font-size: 12px;
     padding: 5px;
+    border-bottom: 2px solid transparent;
   }
 
   .radio-face-group .radio-button {
